# ofti

./: .coverage  .gitignore  AGENTS.md  LICENSE  README.md  TEST_AUDIT.md  TODO.md  of_tui  pyproject.toml  quality.txt  ruff.toml  tmp_boundary
.github/workflows/: python-app.yml
docs/: foamlib_adoption.md  foamlib_survey.md  formats.md  layering.md  runtime-files.md
docs/examples/formats/: archive-layout.txt  bundle-manifest.json  cli-json.json  jobs.json  ofti.toml  queue-record.json  run-manifest.json  snapshot-layout.txt  snapshot.json
docs/schemas/: ofti.case-bundle.v1.schema.json  ofti.cli-envelope.v1.schema.json  ofti.jobs.v1.schema.json  ofti.queue-record.v1.schema.json  ofti.run-manifest.v1.schema.json  ofti.snapshot.v1.schema.json
examples/cavity/0/: U  p
examples/cavity/constant/: transportProperties
examples/cavity/system/: blockMeshDict  controlDict
examples/of_example/: log.checkMesh
examples/of_example/0/: U  p
examples/of_example/system/: controlDict
examples/wedge_sphere/: Allclean  Allmesh_makeAxial  Allrun
examples/wedge_sphere/0/: N  N+  N2  N2+  NO  NO+  O  O+  O2  O2+  T  Tt  Tv  U  cellToRegion  e-  p  pointPriority
examples/wedge_sphere/constant/: chemistryProperties  hTCProperties  hTCReactionsEarth93  mhdProperties  thermo2TModel  thermophysicalProperties  transportProperties
examples/wedge_sphere/system/: blockMeshDict  collapseDict.makeAxial  controlDict  createPatchDict  createPatchDict.makeAxial  decomposeParDict  fvSchemes  fvSolution  sampleDict  topoSetDict.makeAxial
of_example/0/: N+  N2
of_example/constant/: hTCProperties  thermo2TModel  thermoDEM  thermoDEM_TR
of_example/system/: controlDict  decomposeParDict  forces  fvSolution
of_tui/: app.py  cli.py  editor.py  menus.py  openfoam.py  tools.py
ofti/: __init__.py  foamlib_adapter.py  foamlib_logs.py  foamlib_parametric.py  foamlib_runner.py  plugins.py
ofti/app/: app.py  case_ops.py  clean_menu.py  cli.py  cli_help.py  cli_tools.py  commands.py  config_templates.py  helpers.py  logs_analysis.py  logs_fields.py  menu_utils.py  overview.py  state.py  status.py  task_utils.py  tasks.py  time_pruner.py
ofti/app/cli_adapters/: bundle.py  command_builder.py  common.py  knife.py  knife_analysis.py  knife_live.py  knife_parser.py  main.py  manifest.py  plot.py  run.py  run_cases.py  run_parser.py  run_queue_summary.py  watch.py  watch_parser.py
ofti/app/cli_handlers/: __init__.py  knife_analysis.py  knife_basic.py  knife_deck.py  knife_live.py  knife_parser.py  manifest.py  plot.py  run.py  run_cases.py  run_parser.py  watch.py  watch_cases.py
ofti/app/menus/: case_tools.py  config.py  mesh.py  physics.py  postprocessing.py  simulation.py
ofti/app/screens/: __init__.py  check.py  cockpit.py  editor.py  main.py  (+2 more)
ofti/core/: __init__.py  blockmesh.py  boundary.py  case.py  case_bundle.py  case_copy.py  case_fingerprint.py  case_headers.py  case_meta.py  case_report.py  case_snapshot.py  checkmesh.py  command_spec.py  commands.py  dict_compare.py  domain.py  entries.py  entry_io.py  entry_meta.py  events.py  field_compare.py  field_diagnostics.py  field_io.py  field_presets.py  field_reports.py  high_speed.py  mesh_info.py  messages.py  output_contract.py  physical_rules.py  pipeline.py  plot.py  postprocessing.py  run_manifest.py  run_receipt.py  solver_checks.py  solver_status.py  spinner.py  syntax.py  table.py  (+7 more)
ofti/foam/: config.py  exceptions.py  openfoam.py  openfoam_env.py  run_provenance.py  subprocess_utils.py  tasks.py  times.py
ofti/foamlib/: __init__.py  adapter.py  fallback.py  logs.py  parametric.py  postprocessing.py  runner.py
ofti/tools/: __init__.py  alert_service.py  captains_deck_service.py  case_doctor.py  case_ops.py  case_source_service.py  case_status_service.py  change_queue_service.py  cleaning_ops.py  cleaning_utils.py  cli_tools_screens.py  cockpit_service.py  convergence_service.py  diagnostics.py  flight_deck_service.py  helpers.py  input_prompts.py  job_control.py  job_control_service.py  job_registry.py  knife_analysis.py  knife_campaign.py  knife_process.py  knife_runtime.py  knife_service.py  knife_stop.py  launch_checklist_service.py  lint_service.py  log_fold_service.py  logs_analysis.py  logs_fields.py  logs_probes.py  logs_select.py  logs_view.py  menu_helpers.py  menus.py  mesh_radar_service.py  mesh_utils.py  monitor_builder_service.py  navigation_service.py  (+33 more)
ofti/ui/: __init__.py  adapter.py  deck.py  help.py  menu.py  router.py  status.py
ofti/ui_curses/: __init__.py  blockmesh_helper.py  boundary_matrix.py  entry_browser.py  entry_editor.py  help.py  high_speed.py  initial_conditions.py  inputs.py  layout.py  menus.py  openfoam_env.py  prompts.py  snappy_toggle.py  thermo_wizard.py  tool_dicts_ui.py  viewer.py
ofti/ui_textual/: __init__.py  app.py
plugins/hy2foam-mod/: README.md  pyproject.toml
plugins/ofti-hy2foam/: README.md  pyproject.toml
scripts/: foamlib_mcp.py  run_quality_checks.sh
tests/: __init__.py  conftest.py  real_openfoam_helpers.py  real_openfoam_support.py  real_openfoam_tutorials.py  test_alert_service.py  test_app_case_meta.py  test_app_cli_tools_handlers.py  test_app_cli_tools_handlers_behavior.py  test_app_cli_tools_handlers_more.py  test_app_cockpit_screen.py  test_app_helpers.py  test_app_main_flow_more.py  test_app_menu_case_tools.py  test_app_overview.py  test_app_paths.py  test_app_screens_check_search.py  test_app_stage_menus.py  test_app_state_helpers.py  test_app_ui_helper_behavior.py  test_architecture_boundaries.py  test_autoformat_value.py  test_blockmesh.py  test_boundary_actions_foamlib.py  test_boundary_field_checks.py  test_boundary_helpers.py  test_boundary_matrix.py  test_boundary_matrix_helpers.py  test_boundary_parse.py  test_captains_deck_payload.py  test_case_bundle.py  test_case_copy.py  test_case_doctor.py  test_case_fingerprint.py  test_case_header_version.py  test_case_helpers.py  test_case_ops.py  test_case_parsing.py  test_case_report.py  test_case_snapshot.py  (+169 more)
tui/: __init__.py  app.py  editor.py  menus.py  openfoam.py  tools.py  validation.py
(+57 files in other folders)
