[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ofti"
version = "0.1.0"
description = "Curses-based OpenFOAM case editor"
readme = "README.md"
authors = [{name = "OpenFOAM TUI maintainers"}]
license = {file = "LICENSE"}
requires-python = ">=3.11"
keywords = ["OpenFOAM", "TUI", "curses"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "foamlib==1.5.5",
]

[project.scripts]
ofti = "ofti.app.cli:main"

[tool.pytest.ini_options]
addopts = "--cov=ofti --cov-report=term-missing --cov-fail-under=40"
norecursedirs = ["refs"]

[tool.coverage.run]
source = ["ofti"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ofti*"]
