[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ofti"
version = "0.2.1"
description = "Curses-based OpenFOAM case editor"
readme = "README.md"
authors = [{name = "OpenFOAM TUI maintainers"}]
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = ["OpenFOAM", "TUI", "curses"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "foamlib[preprocessing,postprocessing]==1.5.7",
]

[project.scripts]
ofti = "ofti.app.cli:main"

[tool.pytest.ini_options]
addopts = "--cov=ofti --cov-report=term-missing --cov-fail-under=85"
norecursedirs = ["refs"]
markers = [
    "real_openfoam: opt-in tests that launch real OpenFOAM/PyFoam commands",
    "slow: slow integration tests excluded unless --runslow is passed",
]

[tool.coverage.run]
source = ["ofti"]
omit = [
    "ofti/app/screens/*",
    "ofti/ui_curses/*",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ofti*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.13",
    "ty>=0.0.35",
]
