[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ofti"
version = "0.9.0"
description = "CLI-first OpenFOAM case utilities with a curses TUI"
readme = "README.md"
authors = [{name = "OpenFOAM Terminal Interface maintainers"}]
license = {file = "LICENSE"}
requires-python = ">=3.11"
keywords = ["OpenFOAM", "CLI", "TUI", "curses"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "foamlib[preprocessing,postprocessing]==1.5.7",
]

[project.scripts]
ofti = "ofti.app.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["refs"]
fix = true
unsafe-fixes = false

[tool.ruff.lint]
select = [
  "C90",
  "E",
  "W",
  "F",
  "I",
  "B",
  "C4",
  "ERA",
  "A",
  "FA",
  "ARG",
  "COM",
  "DTZ",
  "EXE",
  "FBT",
  "G",
  "ICN",
  "INP",
  "ISC",
  "N",
  "PERF",
  "PIE",
  "PTH",
  "Q",
  "S",
  "PL",
  "RUF",
  "RET",
  "T10",
  "TID",
  "TRY",
  "UP",
  "SIM",
  "YTT",
]
ignore = [
  "FBT",
  "PLR0913",
  "PLR2004",
  "S101",
  "PLW1510",
  "S110",
  "S112",
  "PLC0415",
  "ARG001",
  "B023",
  "TRY003",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 7

[tool.ruff.lint.pylint]
max-branches = 7
max-statements = 36

[tool.ruff.lint.per-file-ignores]
# Complexity ratchet: UI/adapters keep temporary broad ignores while shared
# services/core are cleaned down to the new thresholds.
"ofti/app/**/*.py" = ["C901", "PLR0912", "PLR0915"]
"ofti/ui_curses/**/*.py" = ["C901", "PLR0912", "PLR0915"]
"tests/*" = ["E501", "S101", "PLR2004"]
"tests/test_app_cli_tools_handlers_behavior.py" = ["PLR0915"]
"tests/test_foamlib_runner.py" = ["C901"]
"tests/test_parametric_preprocessing.py" = ["C901"]
"tests/test_real_openfoam_profiles.py" = ["C901", "PLR0912", "PLR0915"]
"tests/test_real_openfoam_toy_case.py" = ["PLR0915"]
"tests/test_run_manifest_process_scan_behavior.py" = ["PLR0915"]
"tests/test_runtime_watch_behavior.py" = ["PLR0915"]
"tests/test_tool_screen_branches.py" = ["PLR0915"]
"tests/test_tool_services_behavior.py" = ["PLR0915"]
"ofti/app/app.py" = ["C901", "PLR0912", "PLR0911", "PLR0915", "S603", "S607", "SIM105"]
"ofti/app/commands.py" = ["C901", "PLR0911", "PLR0912", "PLR0915"]
"ofti/app/helpers.py" = ["C901", "PLR0911", "PLR0912", "S608", "PLR0915"]
"ofti/foam/config.py" = ["C901", "PLR0912", "PLW0603", "PLR0915"]
"ofti/ui_curses/entry_browser.py" = ["C901", "PLR0912", "SIM105", "PLR0915"]
"ofti/app/menus/config.py" = ["C901", "PLR0912", "PLR0915"]
"ofti/app/menus/mesh.py" = ["C901", "PLR0912", "PLR0915"]
"ofti/app/menus/postprocessing.py" = ["C901", "PLR0912", "PLR0915"]
"ofti/app/menus/simulation.py" = ["C901", "PLR0912", "PLR0915"]
"ofti/app/screens/check.py" = ["C901", "PLR0912", "PLR0915"]
"ofti/app/screens/editor.py" = ["S603"]
"ofti/app/screens/search.py" = ["C901", "PLR0912", "S603", "PLR0915"]
"ofti/app/screens/main.py" = ["PLR0911"]
"ofti/core/entry_io.py" = ["S110"]
"ofti/foam/subprocess_utils.py" = ["S603"]
"ofti/app/tool_screens/cleaning_ops.py" = ["C901"]
"ofti/app/tool_screens/diagnostics.py" = ["PLR0911"]
"ofti/app/tool_screens/job_control.py" = ["E501"]
"ofti/app/tool_screens/logs_view.py" = ["C901", "PLR0912", "PLC0415", "PLR0915"]
"ofti/app/tool_screens/menus.py" = ["C901", "E402", "PLR0915"]
"ofti/app/tool_screens/pipeline.py" = ["C901", "PLR0911", "PLR0912", "PLR0915"]
"ofti/app/tool_screens/runner.py" = ["PLW0603"]
"ofti/app/tool_screens/solver.py" = ["C901", "PLR0912", "S603", "PLR0915"]
"ofti/app/tool_screens/tool_dicts_foamcalc.py" = ["C901", "PLR0915"]
"ofti/app/tool_screens/tool_dicts_postprocess.py" = ["C901"]
"ofti/tools/watch_service.py" = ["S603"]
"ofti/tools/watch_external.py" = ["S603"]
"ofti/ui_curses/boundary_matrix.py" = ["C901", "PLR0911"]
"ofti/ui_curses/entry_editor.py" = ["C901", "PLR0912", "PLR0915"]
"ofti/ui_curses/help/manager.py" = ["E501"]
"ofti/ui_curses/initial_conditions.py" = ["C901", "PLR0912", "PLR0915"]
"ofti/ui_curses/inputs.py" = ["C901", "PLR0912", "PLR0915"]
"ofti/ui_curses/menus.py" = ["C901", "PLR0911", "PLR0912", "S603", "PLR0915"]
"ofti/ui_curses/openfoam_env.py" = ["C901", "PLR0915"]
"ofti/ui_curses/thermo_wizard.py" = ["B023", "C901", "PLR0915"]
"ofti/ui_curses/viewer.py" = ["C901", "PLR0912", "PLR0915"]
"tests/test_tools_cleaning.py" = ["PLC0415"]
"tests/test_tools_screens_missing.py" = ["PLC0415"]
"tests/test_tools_workflows.py" = ["PLC0415"]
"tests/test_smoke_cli.py" = ["PLC0415"]
"tests/test_times_behavior.py" = ["TRY003"]
"tests/test_foamlib_integration_helpers.py" = ["ARG001"]
"ofti/app/cli_adapters/knife_parser.py" = ["PLR0915"]
"ofti/app/cli_adapters/run.py" = ["PLR0915"]
"ofti/app/cli_adapters/watch.py" = ["PLR0915"]
# cli_tools re-exports handlers under TYPE_CHECKING for static visibility.
"ofti/app/cli_tools.py" = ["F401"]

[tool.pytest.ini_options]
addopts = "--cov=ofti --cov-report=term-missing --cov-fail-under=85"
norecursedirs = ["refs"]
markers = [
    "real_openfoam: opt-in tests that launch real OpenFOAM/PyFoam commands",
    "slow: slow integration tests excluded unless --runslow is passed",
]

[tool.coverage.run]
source = ["ofti"]
omit = [
    "ofti/app/screens/*",
    "ofti/ui_curses/*",
]

[tool.ty.environment]
python-version = "3.11"
# Plugin packages live under plugins/*/src and are not installed in the dev env;
# point ty at them so plugin tests/modules resolve their imports.
extra-paths = ["plugins/ofti-hy2foam/src", "plugins/hy2foam-mod/src"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ofti*"]

[dependency-groups]
dev = [
    "jsonschema>=4.26.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
    "ty>=0.0.40",
]
